fixed conflict. added a font. working on linking css page

--- a/views/main.html
+++ b/views/main.html
@@ -13,13 +13,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-animate.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="/public/css/style.css">
     <script src="js/app.js"></script>
+
 
   </head>
   <body ng-app="NewsOfToday">
     <!-- Body -->
     <div class="container">
-      <h1 class="text-center">The Main Page</h1>
+      <h1 class="text-center main">The Main Page</h1>
       <h1>{{ 2 + 2 }}</h1>
     </div>
 
