--- a/views/main.html
+++ b/views/main.html
@@ -16,16 +16,35 @@
     <script src="js/app.js"></script>
 
   </head>
-  <body ng-app="NewsOfToday">
+  <body ng-app="NewsOfToday" ng-controller="ApiCtrl" class="container">
     <h1 class="text-center">The Main Page</h1>
     <h1>{{ 2 + 2 }}</h1>
 
+
+    <div class="form-group">
+      <input type="text" id="search" class="form-control smallerSearch shadow" ng-model="userSearch" ng-model-options="{ debounce: 1000 }">
+    </div>
+
+    <div class="container">
+      <div ng-repeat="result in results track by $index">
+        <div class="well">
+          <h2><a href="{{ result.webUrl }}">{{ result.webTitle }}</a></h2>
+        </div>
+      </div>
+
+      <div ng-repeat="result in resultsNY track by $index">
+        <div class="well">
+          <h2><a href="{{result.web_url}}">{{result.headline.main}}</a></h2>
+        </div>
+      </div>
+    </div>
     <!-- jQuery -->
     <script src="//code.jquery.com/jquery.js"></script>
     <!-- Bootstrap JavaScript -->
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+      }
 
   </body>
 </html>
