--- a/views/main.html
+++ b/views/main.html
@@ -29,15 +29,20 @@
     </div>
 
     <div class="container">
-      <div ng-repeat="result in results track by $index">
-        <div class="well">
-          <h2><a href="{{ result.webUrl }}">{{ result.webTitle }}</a></h2>
+      <div class="row">
+        <div class="col-xs-6">
+          <div ng-repeat="result in results track by $index">
+            <div class="well">
+              <h2><a href="{{ result.webUrl }}">{{ result.webTitle }}</a></h2>
+            </div>
+          </div>
         </div>
-      </div>
-
-      <div ng-repeat="result in resultsNY track by $index">
-        <div class="well">
-          <h2><a href="{{result.web_url}}">{{result.headline.main}}</a></h2>
+        <div class="col-xs-6">
+          <div ng-repeat="result in resultsNY track by $index">
+            <div class="well">
+              <h2><a href="{{result.web_url}}">{{result.headline.main}}</a></h2>
+            </div>
+          </div>
         </div>
       </div>
     </div>
