--- a/views/main.html
+++ b/views/main.html
@@ -21,16 +21,13 @@
   </head>
   <body ng-app="NewsOfToday" ng-controller="ApiCtrl" class="container">
     <h1 class="text-center">The Main Page</h1>
-    <h1>{{ 2 + 2 }}</h1>
-
-
     <div class="form-group">
       <input type="text" id="search" class="form-control smallerSearch shadow" ng-model="userSearch" ng-model-options="{ debounce: 1000 }">
     </div>
-
     <div class="container">
       <div class="row">
         <div class="col-xs-6">
+        <h2>The Guardian</h2>
           <div ng-repeat="result in results track by $index">
             <div class="well">
               <h2><a href="{{ result.webUrl }}">{{ result.webTitle }}</a></h2>
@@ -38,6 +35,7 @@
           </div>
         </div>
         <div class="col-xs-6">
+        <h2>New York Times</h2>
           <div ng-repeat="result in resultsNY track by $index">
             <div class="well">
               <h2><a href="{{result.web_url}}">{{result.headline.main}}</a></h2>
