--- a/views/main.html
+++ b/views/main.html
@@ -9,37 +9,43 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
+    <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+
     <!-- Angular scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-animate.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ngInfiniteScroll/1.3.0/ng-infinite-scroll.js"></script>
+
+    <script src="js/app.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <script src="js/app.js"></script>
 
 
   </head>
   <body ng-app="NewsOfToday" ng-controller="ApiCtrl" class="container">
     <h1 class="text-center">The Main Page</h1>
-    <h1>{{ 2 + 2 }}</h1>
-
 
     <div class="form-group">
       <input type="text" id="search" class="form-control smallerSearch shadow" ng-model="userSearch" ng-model-options="{ debounce: 1000 }">
     </div>
 
-    <div class="container">
+    <h3>The Guardian</h3>
+    <div class="container" infinite-scroll="loadMoreNews()" infinite-scroll-distance=".1">
       <div ng-repeat="result in results track by $index">
         <div class="well">
           <h2><a href="{{ result.webUrl }}">{{ result.webTitle }}</a></h2>
         </div>
       </div>
-
-      <div ng-repeat="result in resultsNY track by $index">
-        <div class="well">
-          <h2><a href="{{result.web_url}}">{{result.headline.main}}</a></h2>
-        </div>
       </div>
+
+
+      <h3>The New York Times</h3>
+        <div ng-repeat="result in resultsNY track by $index">
+          <div class="well">
+            <h2><a href="{{result.web_url}}">{{result.headline.main}}</a></h2>
+          </div>
+        </div>
     </div>
 
     <!-- STOP CODING! Script tags only below here -->
