Working on authentication functionality

--- a/views/main.html
+++ b/views/main.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <script src="js/app.js"></script>
 
+    <!-- Auth0 scripts-->
+    <script src="http://cdn.auth0.com/w2/auth0-widget-5.2.js"></script>
+    <script src="http://cdn.auth0.com/w2/auth0-angular-2.js"></script>
 
   </head>
   <body ng-app="NewsOfToday" ng-controller="ApiCtrl" class="container">
