--- a/views/main.html
+++ b/views/main.html
@@ -40,7 +40,7 @@
           <div class="col-xs-6">
           <h2>The Guardian</h2>
             <div ng-repeat="result in results track by $index">
-              <div class="well">
+              <div class="well guardian">
                 <h2 class="title"><a href="{{ result.webUrl }}">{{ result.webTitle }}</a></h2>
               </div>
             </div>
