--- a/views/main.html
+++ b/views/main.html
@@ -28,10 +28,13 @@
 
   </head>
   <body ng-app="NewsOfToday" ng-controller="ApiCtrl" >
-
     <div class="hero-unit" id="hero">
-      <h1 class="text-center main">Dueling Viewpoints</h1>
-      <h3 class="text-center">Bringing you the most up-to-date news of the day. Naturally.</h3>
+      <div id="blankDiv">
+      </div>
+      <div class="overlay">
+        <h1 class="text-center main">Ensemble News</h1>
+        <h3 class="text-center">Bringing you the most up-to-date news of the day. Naturally.</h3>
+      </div>
     </div>
 
     <div class="container" infinite-scroll="loadMoreNews()" infinite-scroll-distance=".01">
@@ -42,7 +45,7 @@
       <div>
         <div class="row">
           <div class="col-xs-6">
-          <h2>The Guardian</h2>
+          <h2><img class="guardianTitle" src="../img/guardian.png"></h2>
             <div ng-repeat="result in results track by $index">
               <div class="well guardian">
                 <h2 class="title"><a href="{{ result.webUrl }}">{{ result.webTitle }}</a></h2>
@@ -50,7 +53,7 @@
             </div>
           </div>
           <div class="col-xs-6">
-          <h2>New York Times</h2>
+          <h2><img  class="timesTitle" src="../img/times.jpg"></h2>
             <div ng-repeat="result in resultsNY track by $index">
               <div class="well times">
                 <h2 class="title"><a href="{{result.web_url}}">{{result.headline.main}}</a></h2>
