--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,5 +1,3 @@
-<a href="/#/signup">Signup</a>
-
 <div class="hero-unit" id="hero">
   <div id="blankDiv">
   </div>
@@ -8,6 +6,11 @@
     <h3 class="text-center">Bringing you the most up-to-date news of the day. Naturally.</h3>
   </div>
 </div>
+    <div class="login">
+      <a href="/#/signup" ng-hide="Auth.isLoggedIn()">Signup</a>
+      <a href="/login" ng-hide="Auth.isLoggedIn()">Login</a>
+      <a href="localhost:3000">Logout</a>
+    </div>
 
 <div class="container" infinite-scroll="loadMoreNews()" infinite-scroll-distance=".01">
   <div class="form-group">
