--- a/public/views/main.html
+++ b/public/views/main.html
@@ -19,7 +19,7 @@
 
   <div>
     <div class="row">
-      <div class="col-xs-6">
+      <div class="col-xs-4">
       <h2><img class="guardianTitle" src="../img/guardian.png"></h2>
         <div ng-repeat="result in results track by $index">
           <div class="well guardian">
@@ -28,12 +28,20 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-6">
-      <h2><img  class="timesTitle" src="../img/times.jpg"></h2>
+      <div class="col-xs-4">
+      <h2><img class="timesTitle" src="../img/times.jpg"></h2>
         <div ng-repeat="result in resultsNY track by $index">
           <div class="well times">
             <h2 class="title"><a href="{{result.web_url}}">{{result.headline.main}}</a></h2>
             <h4>{{result.snippet}}</h4>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-4">
+      <h2>Buzzfeed.com</h2>
+        <div ng-repeat="result in resultsBuzz track by $index">
+          <div class="well">
+            <h2><a href="https://www.buzzfeed.com/{{result.username}}/{{result.uri}}">{{result.title}}</a></h2>
           </div>
         </div>
       </div>
